[ADD/FIX] とりあえずデモデータが閲覧できるようにはした